--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Jinja2==2.11.2
-jsonschema==3.2.0
 click==7.1.2
+jsonschema==3.2.0
+Jinja2==2.11.2
+moviepy==1.0.3
 pedalboard==0.7.8
 pydub==0.25.1
 python-dotenv==1.0.0
